# voice_processing

./: README.md
decode_play_lib/: .cproject  .project
decode_play_lib/decode_play/: decode_play.sln
decode_play_lib/decode_play/decode_play/: ReadMe.txt  decode_play.vcxproj  decode_play.vcxproj.filters  dsound_play.cpp  dsound_play.h  jitter_buffer.cpp  jitter_buffer.h  speex_decode.cpp  speex_decode.h
decode_play_lib/decode_play_demo/: decode_play_demo.sln
decode_play_lib/decode_play_demo/decode_play_demo/: ReadMe.txt  decode_play_demo.cpp  decode_play_demo.vcxproj  decode_play_demo.vcxproj.filters  dsound_play.h  stdafx.cpp
decode_play_lib/decode_play_demo/lib_release/: decode_play.lib
dsound_capture_lib/: .cproject  .project
dsound_capture_lib/dsound_capture/: dsound_capture.sln
dsound_capture_lib/dsound_capture/dsound_capture/: CaptureSound.cpp  CaptureSound.h  ReadMe.txt  dsound_capture.cpp  dsound_capture.h  dsound_capture.vcxproj  dsound_capture.vcxproj.filters  speex_encode.cpp  speex_encode.h
dsound_capture_lib/dsound_capture_demo/: dsound_capture_demo.sln
dsound_capture_lib/dsound_capture_demo/dsound_capture_demo/: CaptureSound.cpp  CaptureSound.h  (+7 more)
dsound_capture_lib/ns_lib/: ns_lib.sln
mix_pcm/: .cproject  .project  CMakeLists.txt  autorun.sh
mix_pcm/src/: AmMultiPartyMixer.cpp  AmMultiPartyMixer.h  CMakeLists.txt  Makefile  SampleArray.cc  SampleArray.h  a.out  capture.spx  capture2.spx  mix_pcm.cpp  mix_pcm.h  output1.spx  rtp_header.h  speex_decode.cpp  speex_decode.h  speex_encode.cpp  speex_encode.h  yyt_error.h  yyt_type.h
(+12 files in other folders)
